---------------------
* GITHUB#11738: Optimize MultiTermQueryConstantScoreWrapper when a term is present that matches all
  docs in a segment. (Greg Miller)

* GITHUB#11735: KeywordRepeatFilter + OpenNLPLemmatizer always drops last token of a stream.
  (Luke Kot-Zaniewski)

* GITHUB#11771: KeywordRepeatFilter + OpenNLPLemmatizer sometimes arbitrarily exits token stream.
  (Luke Kot-Zaniewski)

Other
---------------------
* LUCENE-10423: Remove usages of System.currentTimeMillis() from tests. (Marios Trivyzas)


======================== Lucene 9.4.0 =======================

API Changes
---------------------
* LUCENE-10577: Add VectorEncoding to enable byte-encoded HNSW vectors (Michael Sokolov, Julie Tibshirani)

New Features
---------------------
* LUCENE-10654: Add new ShapeDocValuesField for LatLonShape and XYShape. (Nick Knize)

* LUCENE-10629: Support match set filtering with a query in MatchingFacetSetCounts. (Stefan Vodita, Shai Erera)

* LUCENE-10633: SortField#setOptimizeSortWithIndexedData and
  SortField#getOptimizeSortWithIndexedData were introduced to provide
  an option to disable sort optimization for various sort fields. (Mayya Sharipova)

* GITHUB#912: Support for Java 19 foreign memory support was added. Applications started
  with command line parameter "java --enable-preview" will automatically use the new
  foreign memory API of Java 19 to access indexes on disk with MMapDirectory. This is
  an opt-in feature and requires explicit Java command line flag! When enabled, Lucene logs
  a notice using java.util.logging. Please test thoroughly and report bugs/slowness to Lucene's
  mailing list. When the new API is used, MMapDirectory will mmap Lucene indexes in chunks of
  16 GiB (instead of 1 GiB) and indexes closed while queries are running can no longer crash
  the JVM.  (Uwe Schindler)

Improvements
---------------------
* LUCENE-10592: Build HNSW Graph on indexing. (Mayya Sharipova, Adrien Grand, Julie Tibshirani)
